--- a/tcore/Cargo.toml
+++ b/tcore/Cargo.toml
@@ -7,3 +7,13 @@ edition = "2024"
 atoi = "2.0.0"
 bytes = "1.11.0"
 thiserror = "2.0.17"
+
+[dev-dependencies]
+dhat = "0.3"
+
+[profile.release]
+debug = 1
+
+[features]
+dhat-heap = []    # if you are doing heap profiling
+dhat-ad-hoc = []  # if you are doing ad hoc profiling
