--- a/tcore/Cargo.toml
+++ b/tcore/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2024"
 atoi = "2.0.0"
 bytes = "1.11.0"
 dhat = "0.3"
+strum = "0.27.2"
+strum_macros = "0.27.2"
 thiserror = "2.0.17"
 
 [profile.release]
