--- a/tcore/Cargo.toml
+++ b/tcore/Cargo.toml
@@ -12,14 +12,13 @@ strum_macros = "0.27.2"
 thiserror = "2.0.17"
 
 [profile.release]
-debug = 1
+debug = true
 
 [dev-dependencies]
 dhat = { version = "0.3"}
 
 [features]
 dhat-heap = []    # if you are doing heap profiling
-dhat-ad-hoc = []  # if you are doing ad hoc profiling
 
 [[bin]]
 name = "bench_bencode"
