--- a/tcore/Cargo.toml
+++ b/tcore/Cargo.toml
@@ -7,9 +7,13 @@ edition = "2024"
 atoi = "2.0.0"
 bytes = "1.11.0"
 dhat = "0.3"
+reqwest = { version = "0.13.1", features = ["query"] }
+serde = "1.0.228"
+sha1 = "0.10.6"
 strum = "0.27.2"
 strum_macros = "0.27.2"
 thiserror = "2.0.17"
+tokio = "1.49.0"
 
 [profile.release]
 debug = true
