--- a/tcore/Cargo.toml
+++ b/tcore/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2024"
 anyhow = "1.0.100"
 atoi = "2.0.0"
 bytes = "1.11.0"
+chrono = "0.4.43"
 dhat = "0.3"
+rand = "0.9.2"
 reqwest = { version = "0.13.1", features = ["query"] }
 serde = "1.0.228"
 sha1 = "0.10.6"
