--- a/tcore/Cargo.toml
+++ b/tcore/Cargo.toml
@@ -6,10 +6,12 @@ edition = "2024"
 [dependencies]
 anyhow = "1.0.100"
 atoi = "2.0.0"
+base64 = "0.22.1"
 bytes = "1.11.0"
 chrono = "0.4.43"
 dhat = "0.3"
 rand = "0.9.2"
+readonly = "0.2.13"
 reqwest = { version = "0.13.1", features = ["query"] }
 serde = "1.0.228"
 sha1 = "0.10.6"
@@ -17,12 +19,14 @@ strum = "0.27.2"
 strum_macros = "0.27.2"
 thiserror = "2.0.17"
 tokio = { version = "1.49.0", features = ["full"]}
+url = "2.5.8"
 
 [profile.release]
 debug = true
 
 [dev-dependencies]
 dhat = { version = "0.3"}
+wiremock = "0.6.5"
 
 [features]
 dhat-heap = []    # if you are doing heap profiling
